[gd_scene load_steps=4 format=2]

[ext_resource path="res://Background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Niveles.gd" type="Script" id=2]
[ext_resource path="res://Scenes/theme.tres" type="Theme" id=3]

[node name="Control" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -95.0
margin_right = 210.0
margin_bottom = 95.0
theme = ExtResource( 3 )
custom_constants/separation = 20

[node name="tutorial" type="Button" parent="TextureRect/VBoxContainer"]
margin_left = 110.0
margin_right = 310.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
text = "TUTORIAL"

[node name="CenterContainer" type="GridContainer" parent="TextureRect/VBoxContainer"]
margin_top = 70.0
margin_right = 420.0
margin_bottom = 190.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Nivel_1" type="Button" parent="TextureRect/VBoxContainer/CenterContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "NIVEL 1"

[node name="Nivel_2" type="Button" parent="TextureRect/VBoxContainer/CenterContainer"]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "NIVEL 2"

[node name="Nivel_3" type="Button" parent="TextureRect/VBoxContainer/CenterContainer"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
text = "NIVEL 3"

[node name="Nivel_4" type="Button" parent="TextureRect/VBoxContainer/CenterContainer"]
margin_left = 220.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
text = "NIVEL 4"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 460.0
margin_right = 301.0
margin_bottom = 560.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Back" type="Button" parent="CenterContainer"]
margin_left = 50.0
margin_top = 25.0
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 3 )
text = "ATR√ÅS"
